# dmnumberspay

./: .env.example  .gitignore  README.md  bun.lockb  db.sh  eslint.config.js  globals.d.ts  init.ts  installbrew.fish  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  register_user_result.json  run.sh
.cursor/rules/: convex-rule.mdc
.stellar/contract-ids/: numberspay_uwallet.json  numberspay_wallet.json
.stellar/identity/: newableez.toml
backend/: index.ts  package.json
blockchain/: msc-wallet.rs
contracts/: msc-wallet.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: lib.rs
contracts/smart-wallet/: Cargo.toml
contracts/smart-wallet/src/: lib.rs
contracts/uwallet/: Cargo.toml
contracts/uwallet/src/: base64_urls.rs  lib.rs
contracts/uwallet_deployer/: Cargo.toml
contracts/uwallet_deployer/src/: base64_urls.rs  dep-lib.rs  lib.rs
frontend/: components.json  drizzle.config.ts  next.config.js  package.json  tsconfig.json
frontend/src/app/: layout.tsx  manifest.ts
frontend/src/components/: navbar.tsx
public/: sw.js
src/: env.js  manifest.ts  middleware.ts
src/app/: layout.tsx
src/components/: connect-btn.tsx  navbar.tsx
src/convex/: schema.ts
src/hooks/: use-auth-redirect.ts  use-wallet.ts
src/lib/: deploy.ts  passkey-client.ts  passkey-verifier.ts  phone-utils.ts  privy-client.ts  push-notification.tsx  pwa-install-comp.tsx  stellar-app-cfg.ts  stellarExpert.ts  wallet-provider.tsx  webauthn.ts
src/lib/auth/: dal.ts  (+1 more)
src/server/: passkeyServer.ts
src/styles/: globals.css
uwallet/: setup.txt
(+102 files in other folders)
