[package]
name = "numberspay-wallet"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.7"  # Updated to match what the cargo build is using

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true